# commonroad-reachable-set

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  README_FOR_DEVS.md  compute_reachable_set.py  debug_reach_polygon.py  extract_driving_corridors.py  pyproject.toml  requirements.txt  requirements_build.txt  setup.cfg  setup.py
Docs/: commonroad_reach.rst  commonroad_reach.tests.rst  conf.py  index.rst  modules.rst
ci/: .gitlab-ci.yml  clang-tidy.sh
ci/wheel_building/: README.md  build_and_push_wheelbuilding_docker.sh  test_cr_reach_installation.py
cmake/: CommonRoadReachConfig.cmake.in  install.cmake
commonroad_reach/: __version__.py  compute_driving_corridors.py  compute_driving_corridors_spot.py  compute_reachable_set.py  compute_reachable_set_benchmark.py  compute_reachable_set_multiple.py  extract_driving_corridors.py  main.py  offline_generation.py  online_computation.py  run_qp_planner.py
commonroad_reach/configurations_default/: debug.yaml  planning.yaml  reachable_set.yaml
commonroad_reach/data_structure/: collision_checker.py  collision_checker_cpp.py  collision_checker_py.py  configuration.py  configuration_builder.py  driving_corridor.py  driving_corridor_extractor.py  driving_corridors.py  grid.py  regular_grid.py  segment_tree.py
commonroad_reach/graph_reach/: collision_object_grid.py  example_reachability_online.py  graph_reach_veloctiy.py  import_offline_matlab.py  offline_graph_reach.py  online_graph_reach.py  setup.py  util_reach.pyx  utils.py  visualization.py
commonroad_reach/tests/: DEU_IV21-1_1_T-1.yaml  conftest.py
commonroad_reach/utility/: configuration.py  coordinate_system.py  general.py  geometry.py  (+9 more)
commonroad_reachset/: compute_reachable_set.py  reachable_set.py
configurations/: ARG_Carcarana-1_1_T-1.yaml  C-DEU_B471-1_3_T-1.yaml  C-DEU_B471-1_4_T-1.yaml  DEU_IV21-1_1_T-1.yaml  DEU_Offline-1_1_T-1.yaml  DEU_Test-1_1_T-1.yaml  USA_US101-6_1_T-1.yaml  ZAM_Intersection-1_1_T-1.yaml  ZAM_Over-1_1.yaml  ZAM_Tutorial-1_1_T-1.yaml  ZAM_Tutorial-1_2_T-1.yaml  ZAM_two_lanes_solid_traffic_light.yaml  ZAM_two_lanes_solid_traffic_light_solid_dashed.yaml  config_cpp.yaml  test_cpp.yaml
cpp/: CMakeLists.txt
cpp/include/reachset/common/: collision_checker.hpp  reachability_analysis.hpp  reachable_set_interface.hpp
cpp/include/reachset/common/data_structure/: configuration.hpp  geometry_definition.hpp  reach_node.hpp  reach_polygon.hpp  reach_segment.hpp  segment_tree.hpp
cpp/include/reachset/common/utility/: sweep_line.hpp
cpp/include/reachset/continuous/: continuous_reachability_analysis.hpp
cpp/include/reachset/data_structure/: collision_checker.hpp  configuration.hpp  segment_tree.hpp
cpp/include/reachset/data_structure/reach/: enlargement.hpp  lut_lateral_enlargement.hpp  lut_longitudinal_enlargement.hpp  reach_analysis.hpp  reach_interface.hpp  reach_line.hpp  reach_node.hpp  reach_polygon.hpp  reach_polygon2.hpp  reach_segment.hpp  reach_set.hpp  reach_vertex.hpp  virtual_reachability_analysis.hpp
cpp/include/reachset/semantic/: semantic_reachability_analysis.hpp
cpp/include/reachset/semantic/data_structure/: position_interval.hpp  region.hpp  semantic_model.hpp  traffic_rule.hpp
cpp/include/reachset/utility/: collision_checker.hpp  enlargement.hpp  geometry_definition.hpp  lut_longitudinal_enlargement.hpp  miscellaneous.hpp  reach_operation.hpp  shared_include.hpp  shared_using.hpp  sweep_line.hpp  test.cpp
cpp/src/: example.cpp  playground.cpp  playground_continuous.cpp  playground_semantic.cpp
cpp/src/common/: collision_checker.cpp  reachable_set_interface.cpp
cpp/src/common/data_structure/: configuration.cpp  reach_node.cpp  reach_polygon.cpp  segment_tree.cpp
cpp/src/common/utility/: miscellaneous.cpp  reach_operation.cpp  sweep_line.cpp
cpp/src/continuous/: continuous_reachability_analysis.cpp
cpp/src/data_structure/: collision_checker.cpp  configuration.cpp  segment_tree.cpp
cpp/src/data_structure/reach/: enlargement.cpp  lut_lateral_enlargement.cpp  lut_longitudinal_enlargement.cpp  reach_analysis.cpp  reach_interface.cpp  reach_line.cpp  reach_node.cpp  reach_polygon.cpp  reach_polygon2.cpp  reach_polygon_boost.cpp  reach_segment.cpp  reach_set.cpp  reach_vertex.cpp
cpp/src/semantic/: model_checker.cpp  semantic_reachability_analysis.cpp
cpp/src/semantic/data_structure/: position_interval.cpp  region.cpp  semantic_model.cpp  traffic_rule.cpp
cpp/src/utility/: collision_checker.cpp  enlargement.cpp  lut_longitudinal_enlargement.cpp  miscellaneous.cpp  reach_operation.cpp  sweep_line.cpp
cpp/tests/: CMakeLists.txt  test_utility.cpp  test_utility.hpp
cpp/tests/common/: test_reachable_set_interface.cpp
cpp/tests/continuous/: test_continuous_reachability_analysis.cpp
cpp/tests/data_structure/: test_reach_node.cpp  test_reach_polygon.cpp  test_segment_tree.cpp
cpp/tests/data_structure/reach/: test_minkowski.cpp  test_reach_base_set.cpp  test_reach_node.cpp  test_reach_polygon.cpp  test_reach_set.cpp
cpp/tests/utility/: test_collision_checker.cpp  test_minkowski.cpp  test_reach_operation.cpp  test_sweep_line.cpp
doc/: Doxyfile
docs/: requirements_doc.txt
not_for_public_repo/: buffer.py  extract_driving_corridors_spot.py  minimal_example.md
python_binding/: CMakeLists.txt  minkowski_comparison.py  pybind.cpp  pybind.hpp  pybind_data_structure.cpp  pybind_reachset.cpp  pybind_utility.cpp
scenarios/: ARG_Carcarana-1_1_T-1.xml  C-DEU_B471-1_3_T-1.xml  C-DEU_B471-1_4_T-1.xml  C-DEU_B471-1_5_T-1.xml  DEU_IV21-1_2_T-1.xml  DEU_IV21-1_3_T-1.xml  DEU_IV21-2_1_T-1.xml  DEU_IV21-3_1_T-1.xml  DEU_LocationALower-28_1_S-1.xml  ZAM_Intersection-1_1_T-1.xml  ZAM_Tjunction-1_313_T-1.xml  ZAM_Tutorial-1_2_T-1.xml  ZAM_Zip-1_6_T-1.xml  ZAM_two_lanes_dashed.xml  ZAM_two_lanes_solid.xml  ZAM_two_lanes_solid_traffic_light.xml  ZAM_two_lanes_solid_traffic_light_solid_dashed.xml  ZAM_two_lanes_solid_traffic_light_solid_dashed2.xml  open_scenario.py
tests/: conftest.py
tutorials/: 0_reachable_set_computation.ipynb  1_reachable_set_computation_graph_based.ipynb  minimal_example.py
(+290 files in other folders)
