[project]
name = "commonroad-reach"
version = "2023.1.1"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8,<3.11"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Cyber-Physical Systems Group, Technical University of Munich", email = "commonroad@lists.lrz.de" }
]
description = "A Toolbox for Computing Reachable Sets of Automated Vehicles"
keywords = [
    "autonomous vehicles",
    "automated driving",
    "motion planning",
    "reachability analysis",
]
dependencies = [
    "commonroad-io>=2023.1",
    "commonroad-route-planner>=2024.1",
    "commonroad-drivability-checker>=2023.1",
    "cython>=0.29.28",
    "imageio>=2.9.0",
    "matplotlib>=3.3.3",
    "networkx>=2.5",
    "numpy>=1.19.2",
    "omegaconf>=2.1.1",
    "opencv-python>=4.5",
    "scipy>=1.4.1",
    "seaborn>=0.10.0",
    "shapely>=2.0.0",
]

classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://commonroad.in.tum.de/tools/commonroad-reach"
Documentation = "https://commonroad.in.tum.de/docs/commonroad-reach/"
Forum = "https://commonroad.in.tum.de/forum/c/commonroad-reach/19"
Source = "https://gitlab.lrz.de/tum-cps/commonroad-reach"

[project.optional-dependencies]
test = [
    "pytest>=3.8.0",
]
docs = [
    "Sphinx>=4.5.0",
    "sphinx-autodoc-typehints>=1.18.1",
    "m2r2>=0.3.0",
]

[build-system]
requires = [
    "scikit-build-core~=0.4.7",
    "pybind11~=2.10.0",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["commonroad_reach"]
build-dir = "build/{wheel_tag}"
cmake.targets = ["pycrreach"]

[tool.scikit-build.cmake.define]
ADD_TESTS = "OFF"
